--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags "-std=c++11 -frtti -fexceptions"
-                abiFilters 'x86', 'x86_64', 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'mips', 'mips64'
+                abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
 
             }
         }
@@ -20,7 +20,7 @@ android {
 
     sourceSets {
         main {
-            jniLibs.srcDirs = ['/Users/garyrendle/Documents/5_PROGRAMMING/Android/MIS_cpp_test/app/src/main/jniLibs']
+            jniLibs.srcDirs = ['D:/Study/Weimar BU/MIS/MIS_cpp_algorithm_test/app/src/main/jniLibs']
         }
     }
 
