--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    compile 'com.google.android.gms:play-services:11.8.0'
+    implementation 'com.google.android.gms:play-services:11.8.0'
 
 
     implementation project(':openCVLibrary342')
